root path based local files